syntax = "proto3";

package note.sdk.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/ryanreadbooks/whimer/note/sdk/v1";

message IsUserOwnNoteReq {
  uint64 uid = 1;     // 用户id
  uint64 note_id = 2; // 笔记id
}

message IsUserOwnNoteRes {
  uint64 uid = 1;
  bool result = 2; // 结果
}

message IsNoteExistReq { uint64 note_id = 1; }

message IsNoteExistRes { bool exist = 1; }

message CreateReqBasic {
  string title = 1;
  string desc = 2;
  int32 privacy = 3;
}

message CreateReqImage { string file_id = 1; }

message CreateNoteReq {
  CreateReqBasic basic = 1;
  repeated CreateReqImage images = 2;
}

message CreateNoteRes { uint64 note_id = 1; }

message DeleteNoteReq { uint64 note_id = 1; }

message DeleteNoteRes {}

message UpdateNoteReq {
  uint64 note_id = 1;
  CreateNoteReq note = 2;
}

message UpdateNoteRes { uint64 note_id = 1; }

message GetNoteReq { uint64 note_id = 1; }

message GetNoteResImage {
  string url = 1;
  int32 type = 2;
}

message NoteItem {
  uint64 note_id = 1;
  string title = 2;
  string desc = 3;
  int32 privacy = 4;
  int64 create_at = 5;
  int64 update_at = 6;
  repeated GetNoteResImage images = 7;
  uint64 likes = 8; // 点赞数量
}

message ListNoteReq {}

message ListNoteRes { repeated NoteItem items = 1; }

message GetUploadAuthReq {
  string resource = 1;
  string source = 2;
  string mime_type = 3;
}

message UploadAuthResHeaders {
  string auth = 1;
  string sha256 = 2;
  string date = 3;
  string token = 4;
}

message GetUploadAuthRes {
  string file_id = 1;
  int64 current_time = 2;
  int64 expire_time = 3;
  string upload_addr = 4;
  UploadAuthResHeaders headers = 5;
}

message LikeNoteReq {
  uint64 note_id = 1 [ (buf.validate.field).uint64.gt = 0 ]; // 笔记id
  uint64 uid = 2 [ (buf.validate.field).uint64.gt = 0 ]; // 执行点赞的用户id
  enum Operation {
    OPERATION_UNDO_LIKE = 0; // 取消点赞
    OPERATION_DO_LIKE = 1;   // 点赞
  }
  Operation operation = 3;
}

message LikeNoteRes {}

message GetNoteLikesReq {
  uint64 note_id = 1 [ (buf.validate.field).uint64.gt = 0 ]; //笔记id
}

message GetNoteLikesRes {
  uint64 note_id = 1;
  uint64 likes = 2; // 点赞数量
}

service NoteService {
  // 检查用户是否拥有指定的笔记
  rpc IsUserOwnNote(IsUserOwnNoteReq) returns (IsUserOwnNoteRes);
  // 判断笔记是否存在
  rpc IsNoteExist(IsNoteExistReq) returns (IsNoteExistRes);
  // 创建笔记
  rpc CreateNote(CreateNoteReq) returns (CreateNoteRes);
  // 更新笔记
  rpc UpdateNote(UpdateNoteReq) returns (UpdateNoteRes);
  // 删除笔记
  rpc DeleteNote(DeleteNoteReq) returns (DeleteNoteRes);
  // 获取笔记的信息
  rpc GetNote(GetNoteReq) returns (NoteItem);
  // 列出笔记
  rpc ListNote(ListNoteReq) returns (ListNoteRes);
  // 获取上传凭证
  rpc GetUploadAuth(GetUploadAuthReq) returns (GetUploadAuthRes);
  // 点赞笔记/取消点赞
  rpc LikeNote(LikeNoteReq) returns (LikeNoteRes);
  // 获取笔记点赞数量
  rpc GetNoteLikes(GetNoteLikesReq) returns (GetNoteLikesRes);
}
